// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot 1`] = `
<ForwardRef
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#0084F8",
      "borderRadius": 4,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "marginHorizontal": 36,
        "marginVertical": 12,
        "textAlign": "center",
      }
    }
    textType="semiBold"
    type="small"
  >
    Test
  </Text>
</ForwardRef>
`;

exports[`Button should match snapshot for disabled 1`] = `
<ForwardRef
  disabled={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#C9D6DF",
      "borderRadius": 4,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "marginHorizontal": 36,
        "marginVertical": 12,
        "textAlign": "center",
      }
    }
    textType="semiBold"
    type="small"
  >
    Test
  </Text>
</ForwardRef>
`;

exports[`Button should match snapshot for secondary button 1`] = `
<ForwardRef
  disabled={false}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#0084F8",
      "borderRadius": 4,
      "borderWidth": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#0084F8",
        "marginHorizontal": 36,
        "marginVertical": 12,
        "textAlign": "center",
      }
    }
    textType="semiBold"
    type="small"
  >
    Test
  </Text>
</ForwardRef>
`;
